--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   after_layout: ^1.0.7+2
   cached_network_image: ^2.5.0
   shared_preferences: ^0.5.12+4
+  http: ^0.12.2
+  shimmer: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
