--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   shared_preferences: ^0.5.12+4
   http: ^0.12.2
   shimmer: ^1.1.0
+  bloc: ^3.0.0
+  flutter_bloc: ^3.2.0
+  equatable: ^1.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
