--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   bloc: ^3.0.0
   flutter_bloc: ^3.2.0
   equatable: ^1.2.5
+  flutter_youtube: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
